--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     width: 100%;
     max-width: 500px;
     padding: 20px;
-    margin-top: 150px;
+    margin-top: 575px;
 }
 
 .profile-card {
@@ -72,4 +72,42 @@ h1 {
     font-size: 16px;
     color: #444;
     margin-bottom: 5px;
+}
+.favorite-items {
+    margin-top: 20px;
+    padding: 20px;
+    background-color: rgba(199, 191, 191, 0.419);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.favorite-items h3 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.items {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
+.item {
+    text-align: center;
+    width: 100px;
+    margin: 10px;
+}
+
+.item img {
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
+}
+
+.item p {
+    font-size: 14px;
+    color: #333;
 }
